--- a/devils-hunt.html
+++ b/devils-hunt.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/Article-List.css">
+    <link rel="stylesheet" href="assets/css/audio.css">
     <link rel="stylesheet" href="assets/css/Bootstrap-Chat.css">
     <link rel="stylesheet" href="assets/css/Carousel_Image_Slider-1.css">
     <link rel="stylesheet" href="assets/css/Carousel_Image_Slider.css">
@@ -62,10 +63,12 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
-                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
+                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item disabled" href="#">Devils Hunt</a>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item disabled" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
@@ -194,7 +197,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name">Devils Hunt DLC-Pack</h3>
-                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a>
+                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="http://admin.blaxrew-studios.vision" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name"><strong>Devils Hunt Boardgame</strong><br></h3>
@@ -231,7 +234,7 @@
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
-                <p class="copyright">BlaXrew Studios © 2015-2020</p>
+                <p class="copyright">BlaXrew Studios © 2015-2021</p>
             </div>
         </footer>
     </div>
@@ -259,6 +262,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
     <script src="assets/js/countdown-timer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
