--- a/fallen_world.html
+++ b/fallen_world.html
@@ -66,7 +66,7 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item disabled" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item disabled" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
                             </div>
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="text-white">Lights And Shadows Trailer</h2>
+                    <h2 class="text-white">Fallen World Trailer</h2>
                     <p class="text-white-50">At the moment we do not have a trailer for the game. We used one of Blackture's Videos as placeholder. Trailer is coming soon.<br></p>
                 </div>
                 <div class="col-md-6"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/NiWuJxWX0ug?autoplay=1&amp;mute=1" width="560" height="315" style="width: 100%;"></iframe></div>
@@ -109,10 +109,9 @@
     <div class="simple-slider">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="bg-dark swiper-slide"><img src="assets/img/Banner%201%201920x1080.png" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);width: 66%;margin-left: 17.5%;"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/grafik.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/banner-907x510.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/lula.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide"><img src="assets/img/cool0001-kopie-960x540.png" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);width: 66%;margin-left: 17.5%;"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/holobaum-907x483.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/holobaumv3-692x483.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
             </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
@@ -125,23 +124,23 @@
                 <div class="col-md-12" style="margin-top: 10px;">
                     <div>
                         <ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-1">Information</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Information</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Progress</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3">Plans</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-4">Changelog</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4">Changelog</a></li>
                         </ul>
                         <div class="tab-content">
-                            <div class="tab-pane" role="tabpanel" id="tab-1">
-                                <p class="text-left">This is a singleplayer third person controlled story adventure game.<br>Make tasks and make decisions wisely because they could lead you to the abyss. Go with or against the light. Now it's your turn. This game uses RTX!<br>Get the game as we release it if you want to know more about the story. Subscribe to the newsletter to get those information via mail.<br><br></p>
+                            <div class="tab-pane active" role="tabpanel" id="tab-1">
+                                <p class="text-left">Thig is a singleplayer first person controlled story adventure game.<br><br>You start as boy aged around 16. You get to know the that boy has got blurred views. He called those views "visions" or "additions to the world". In those "visions" he sees images of destruction and elimination. His so called addition shows shadows. Suddenly the vision are ordering themselves, getting true.<br><br>Get the game as we release it if you want to know more about the story. Subscribe to the newsletter to get those information via mail.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
-                                <p class="text-left">The game is in progress the story is finished at the moment.<br>In designing and developing process.<br></p>
+                                <p class="text-left">The game is in progress the story is not finished at the moment. Without the story finished we can not start designing it.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-3">
                                 <p class="text-left">The future plans are the game itself.<br></p>
                             </div>
-                            <div class="tab-pane active" role="tabpanel" id="tab-4">
-                                <p class="text-left"><strong>TEST&nbsp; VERSION</strong><br>0.0.1<br>- Initial Commit<br><br>0.0.1a<br>- Beginnings of the Light Temple<br><br>0.0.2<br>- A complete new scene<br>- Start of a questing system<br>- Start of a interaction system<br>- Average player-movement system<br><br>0.0.3<br>- Improve graphics<br>- Add popup for quest completions<br>- Add animations tp "completed" popup<br><br>0.0.4<br>- Fix to the directional light and volume<br>- Add new stuff to the scene<br><br>0.0.5<br>- Change to third person controller<br>- Add animated player</p>
+                            <div class="tab-pane" role="tabpanel" id="tab-4">
+                                <p class="text-left"><strong>TEST&nbsp; VERSION</strong><br>NONE</p>
                             </div>
                         </div>
                     </div>
@@ -179,7 +178,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="404.html#newsletter-subscribe" target="_parent">Learn More</a></p>
+                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="index.html#newsletter-subscribe" target="_parent">Learn More</a></p>
                     </div>
                 </div>
             </div>
@@ -193,9 +192,9 @@
             </div>
             <div class="row articles">
                 <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png"></a>
-                    <h3 class="name">Lights And Shadows</h3>
-                    <p class="text-white-50 description">The main game with it's content is already playable for testers. Click on the download symbol below to go to the download of Lights And Shadows</p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://bxs-admin.herokuapp.com" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
+                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png"></a>
+                    <h3 class="name">Fallen World</h3>
+                    <p class="text-white-50 description">Download and start the game. Rush into a stunning adventure telling you a story about a time paradox ad an invasion.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                             <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
                             <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z" fill="currentColor"></path>
                         </svg></a><a class="action" href="#"></a>
