--- a/forum.html
+++ b/forum.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/Article-List.css">
+    <link rel="stylesheet" href="assets/css/audio.css">
     <link rel="stylesheet" href="assets/css/Bootstrap-Chat.css">
     <link rel="stylesheet" href="assets/css/Carousel_Image_Slider-1.css">
     <link rel="stylesheet" href="assets/css/Carousel_Image_Slider.css">
@@ -58,6 +59,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
     <script src="assets/js/countdown-timer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
